Fix header text responsive

--- a/table-page.html
+++ b/table-page.html
@@ -16,9 +16,8 @@
   	<!-- body code goes here -->
 	  
 <header class="header" >
-	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100"
-	  xml:space="preserve">
-	<rect x="1%" y="10%" class="st0" width="28.82" height="85.49"/>
+	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%"	xml:space="preserve">
+	<rect x="1%" y="5%" class="st0" width="28.82" height="95"/>
 	<p id="year"  herf="*" class="st2 st3"> </p>
 		<p class="st4 st5">SCHEDULES FOR STUDENTS</p>
 <!--<text  href="*" x="5%" y="90%" class="st5 st4"  style="fill:black;">SCHEDULES FOR STUDENTS </text>	-->		
@@ -37,7 +36,7 @@
   <footer class="footer">
 		 
 	  <img width="170" height="50" src="images/Svg/Svgfooter.svg" alt="svg">
-	  <div id="year2" style="position: absolute;bottom: 5px;right: 20px;font-family:'Montserrat Medium';font-size:30px"></div>
+	  <div id="year2" Class="footer_year"></div>
   </footer>
 
 	  
