--- a/table-page.html
+++ b/table-page.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Table-page</title>
 	<link rel="stylesheet" href="css/Tstyle.css">
-	  
+	
 	  
     <!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 	  
 <header class="header" >
 	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%"	xml:space="preserve">
-	<rect x="1%" y="5%" class="st0" width="28.82" height="95"/>
+	<rect x="1%" y="5%" class="st0" width="20.82" height="70"/>
 	<p id="year"  herf="*" class="st2 st3"> </p>
 		<p class="st4 st5">SCHEDULES FOR STUDENTS</p>
 <!--<text  href="*" x="5%" y="90%" class="st5 st4"  style="fill:black;">SCHEDULES FOR STUDENTS </text>	-->		
@@ -31,7 +31,14 @@
 	
 	</div>	
 </header>
-	
+
+ <div class="sidebar">
+	 
+  <a href="#More"><img class="top_icon" alt="icon" src="images/Svg/moreicon-01.svg" herf="*" ></a>
+	 <a href="table-page.html"><img class="middel_icon" alt="icon" src="images/Svg/tableicon-01.svg" herf="*" ></a>
+  
+  <a href="#Settings"><img class="bottom_icon" alt="icon" src="images/Svg/settingsicon-01.svg" herf="*" ></a>
+</div>
 	  
   <footer class="footer">
 		 
