--- a/table-page.html
+++ b/table-page.html
@@ -7,16 +7,16 @@
     <title>Table-page</title>
 	<link rel="stylesheet" href="css/Tstyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	  
+	<script src="https://kit.fontawesome.com/6a41b5ee01.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	
   </head>
   <body>
   	<!-- body code goes here -->
-	
+<div class="grid-container">
 <!-- Page Header -->	  
-<header class="header" >
+<header class="item0" >
 	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%"	xml:space="preserve">
 	<rect x="1%" y="5%" class="st0" width="20.82" height="70"/>
 	<p id="year"  herf="*" class="st2 st3"> </p>
@@ -36,39 +36,55 @@
 	  
 <!-- Side Bar  -->
 	  
- <div class="sidebar">
-	 
+ <div class="item1">
+	
   <a href="#More"><img class="top_icon" alt="icon" src="images/Svg/moreicon-01.svg" herf="*" ></a>
+	 
 	 <a href="table-page.html"><img class="middel_icon" alt="icon" src="images/Svg/tableicon-01.svg" herf="*" ></a>
-  
+	 
   <a href="#Settings"><img class="bottom_icon" alt="icon" src="images/Svg/settingsicon-01.svg" herf="*" ></a>
+	 
 </div>
 	  
 	<!-- Side Bar End -->  
 	  
 	  <!-- Day-Month -->
-  <div class="day_date_container">
+  <div class="item5">
 		  <p id="day" class="day_text"> </p>
 		  <p id="month" class="month_text"> </p>
 	  
 	  </div>
 	  <!-- Day-Month End -->
 	  
+	
+	<!-- College News And Notifications -->
+	<div class="item3">
+		<div class="newscg">
+			<div class="iconc"><i class="fas fa-school"></i></div>
+		</div>
+		<div class="newscg newscg1">
+			<p class="newstext">Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
+		</div>
+	
+	</div>
+	
+	<!-- College News And Notifications End -->
 	  
 	  <!-- Image-Download --->
-	  
+	  <div class="item4">
 	  <button class="button button1"><i class="fa fa-download"></i>  Donlowad</button>
-	  
+	  <!--
 	  <div class="img_container">
 		  <img alt="Tea" src="images/11099680.jpg" class="img_size">
 	  
 	  </div>
-	  
-	  <!-- Image-Download --->
+-->
+	  </div>
+	  <!-- Image-Download End --->
 	  
 	  
 	 <!-- Table -->
-	  <div class="tablediv">
+	  <div class="item2">
 <table class="tg">
 <thead>
   <tr>
@@ -127,14 +143,14 @@
 	 
 	  
 	<!-- Page Footer -->
-  <footer class="footer">
+  <footer class="item6">
 		 
 	  <img width="170" height="50" src="images/Svg/Svgfooter.svg" alt="svg">
 	  <div id="year2" Class="footer_year"></div>
   </footer>
 	  
 	  <!-- Page Footer End -->
-
+		</div>  
 	  
   <!--  all compiled plugins (below) -->
 	<script src="js/popper.min.js"></script> 
